add client in compose, fixes for admin_backend

--- a/admin-backend/Dockerfile
+++ b/admin-backend/Dockerfile
@@ -2,11 +2,11 @@ FROM python:3.7.3-alpine
 
 RUN apk add --update mariadb-dev gcc libc-dev libffi-dev
 
-COPY requirements.txt /usr/src/client/
-RUN pip install --no-cache-dir -r /usr/src/client/requirements.txt
+COPY requirements.txt /usr/src/admin-backend/
+RUN pip install --no-cache-dir -r /usr/src/admin-backend/requirements.txt
 
-COPY app /usr/src/client/app
+COPY app /usr/src/admin-backend/app
 
 EXPOSE 8888
-CMD ["python", "/usr/src/client/insert_test_countries.py"]
-CMD ["python", "/usr/src/client/insert_test_data.py"]
+CMD "python /usr/src/admin-backend/app/insert_test_counties.py\
+  && python /usr/src/admin-backend/app/insert_test_data.py"
