fix dockerfile and use latest versions of images

--- a/admin-backend/Dockerfile
+++ b/admin-backend/Dockerfile
@@ -8,5 +8,5 @@ RUN pip install --no-cache-dir -r /usr/src/admin-backend/requirements.txt
 COPY app /usr/src/admin-backend/app
 
 EXPOSE 8888
-CMD "python /usr/src/admin-backend/app/insert_test_counties.py\
-  && python /usr/src/admin-backend/app/insert_test_data.py"
+CMD python /usr/src/admin-backend/app/insert_test_counties.py\
+  && python /usr/src/admin-backend/app/insert_test_data.py
