added admin-backend flask server

--- a/admin-backend/Dockerfile
+++ b/admin-backend/Dockerfile
@@ -5,8 +5,11 @@ RUN apk add --update mariadb-dev gcc libc-dev libffi-dev
 COPY requirements.txt /usr/src/admin-backend/
 RUN pip install --no-cache-dir -r /usr/src/admin-backend/requirements.txt
 
+COPY insert_test_counties.py /usr/src/admin-backend/
+COPY insert_test_data.py /usr/src/admin-backend/
 COPY app /usr/src/admin-backend/app
 
-EXPOSE 8888
-CMD python /usr/src/admin-backend/app/insert_test_counties.py\
-  && python /usr/src/admin-backend/app/insert_test_data.py
+EXPOSE 9901
+CMD python /usr/src/admin-backend/insert_test_counties.py\
+  && python /usr/src/admin-backend/insert_test_data.py\
+  && python /usr/src/admin-backend/app/app.py
