fix admin-backend by adding start.py

--- a/admin-backend/Dockerfile
+++ b/admin-backend/Dockerfile
@@ -7,9 +7,11 @@ RUN pip install --no-cache-dir -r /usr/src/admin-backend/requirements.txt
 
 COPY insert_test_counties.py /usr/src/admin-backend/
 COPY insert_test_data.py /usr/src/admin-backend/
+
 COPY app /usr/src/admin-backend/app
+COPY start.py /usr/src/admin-backend/
 
 EXPOSE 9901
 CMD python /usr/src/admin-backend/insert_test_counties.py\
   && python /usr/src/admin-backend/insert_test_data.py\
-  && python /usr/src/admin-backend/app/app.py
+  && python /usr/src/admin-backend/start.py
