--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -16,6 +16,8 @@ services:
 
   admin-backend:
     image: mpogonaru/idp_evp_admin-backend
+    ports:
+        - "9901:9901"
     networks:
       - admin
     deploy:
